<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2020/03/24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="70" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="23" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_delete"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#EF4242"
        android:text="@string/delete"
        android:textSize="10sp" />
</LinearLayout>